--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
-        <a href="home.html">
+        <a href="index.html">
             <div class="col-md-2 px-3">
                 <img src="images/miniLogo.png" class="img-fluid">
             </div>
