--- a/resumePage.html
+++ b/resumePage.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
-        <a href="home.html">
+        <a href="index.html">
             <div class="col-md-2 px-3">
                 <img src="images/miniLogo.png" class="img-fluid">
             </div>
@@ -27,7 +27,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active text-light" aria-current="page" href="home.html">Home</a>
+                <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
                 <a class="nav-link text-light" href="#">Resume</a>
             </div>
         </div>
