visual aesthetic changes

--- a/resumePage.html
+++ b/resumePage.html
@@ -63,7 +63,7 @@
             <h1 class="display-4">Resume</h1>
             <hr>
             <div class="col-md-6">
-                <a href="Resume-Tal%20Berdichevsky.pdf" class="button btn btn-circle btn-outline-dark" download><i class="fa fa-download"></i>To Download CV</a>
+                <a href="Resume-Tal Berdichevsky.pdf" class="button btn btn-circle btn-outline-dark" download><i class="fa fa-download"></i>To Download CV</a>
 
             </div>
         </div>
@@ -75,7 +75,7 @@
     <div class="container-fluid padding">
         <br>
     <div class="text-center col-12">
-        <embed src="Resume-Tal%20Berdichevsky.pdf#toolbar=0" width="780px" height="1005px"/>
+        <embed src="Resume-Tal Berdichevsky.pdf#toolbar=0" width="780px" height="1005px"/>
     </div>
 </div>
 
