--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             </div>
         </div>
         <br>
+
         <div class="shadow card p-3 mb-1 rounded" style="background-color:rgba(215, 230, 255, 0.8)">
             <div class="row">
                 <div class="col-md-6">
@@ -190,7 +191,7 @@
 
                     <p>
                         HowBusyIsMarino.com is a website summarizing Northeastern gymnasium activity over previous periods of time.
-                        It produces graphical predictions for future capacity at Marino in the form of a heat map(as seen bellow).
+                        It produces graphical predictions for future capacity at Marino in the form of a heat map(click plus button bellow).
                         This allows users to plan their future workouts accordingly.
                     </p>
                     <p>
@@ -207,29 +208,44 @@
 
             </div>
             <hr>
-            <br>
 
+            <div class="row justify-content-center">
 
-            <div class="row">
-                <div class="col-md-3">
-                    <img src="images/oasisWebsite/marino1.png" class="img-fluid rounded">
-                    <br><br>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/oasisWebsite/marino2.png" class="img-fluid rounded">
-                    <br><br>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/oasisWebsite/marino3.png" class="img-fluid rounded">
-                    <br><br>
-                </div>
-                <div class="col-md-3">
-                    <img src="images/oasisWebsite/marino4.png" class="img-fluid rounded">
-                    <br><br>
-                </div>
-
-
+            <div class="col-md-1">
+                <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseOasis" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                    </svg>
+                </a>
             </div>
+                </div>
+
+            </p>
+            <div class="collapse" id="collapseOasis">
+                <div class="card card-body">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="images/oasisWebsite/marino1.png" class="img-fluid rounded">
+                            <br><br>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="images/oasisWebsite/marino2.png" class="img-fluid rounded">
+                            <br><br>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="images/oasisWebsite/marino3.png" class="img-fluid rounded">
+                            <br><br>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="images/oasisWebsite/marino4.png" class="img-fluid rounded">
+                            <br><br>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
 
 
 
@@ -265,8 +281,20 @@
 
             </div>
             <hr>
-            <br>
 
+            <div class="row justify-content-center">
+            <div class="col-md-1">
+                <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseMIT" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+            </div>
+
+            </p>
+            <div class="collapse" id="collapseMIT">
 
             <div class="row">
                 <div class="col-1"> </div>
@@ -282,11 +310,12 @@
 
 
             </div>
-
-
-
-
+               
         </div>
+
+
+
+
 
         <br>
 
@@ -359,7 +388,7 @@
 
         </div>
 
-
+        </div>
 
         </div>
 
