--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                     <p>
                         HowBusyIsMarino.com is a website summarizing Northeastern gymnasium activity over previous periods of time.
-                        It produces graphical predictions for future capacity at Marino in the form of a heat map(click plus button bellow).
+                        It produces graphical predictions for future capacity at Marino in the form of a heat map (press + button bellow).
                         This allows users to plan their future workouts accordingly.
                     </p>
                     <p>
@@ -267,8 +267,8 @@
                     <p>
                         Explored Graph Theory under the mentorship of an MIT student Agustín García in a selective program.
                         Offered students a unique student view on Graph Theory and map coloring by authoring an expository
-                        paper on Graph Theory and map coloring(directly below).
-                        Presented at ninth annual MIT PRIMES conference to spread knowledge regarding project highlights(presentation also below).
+                        paper on Graph Theory and map coloring (press + button below).
+                        Presented at ninth annual MIT PRIMES conference to spread knowledge regarding project highlights(presentation also below through + button).
                     </p>
                 </div>
                 <div class="col-md-1">
@@ -310,7 +310,7 @@
 
 
             </div>
-               
+
         </div>
 
 
