syntax fix for photo

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                     <img src="images/ducks.jpg" alt="Photo 4">
                 </div>
                 <div class="photo-item" data-lightbox="gallery" data-title="Photo 5" style="--rotation: 2deg;">
-                    <img src="images/scene.jpg" alt="Photo 5">
+                    <img src="images/scene.JPG" alt="Photo 5">
                 </div>
                 <div class="photo-item" data-lightbox="gallery" data-title="Photo 6" style="--rotation: -15deg;">
                     <img src="images/squirrel1.jpg" alt="Photo 6">
