--- a/index.html
+++ b/index.html
@@ -798,23 +798,31 @@
             </div>
             
             <!-- Scroll Back Up Button -->
-            <div class="text-center">
-                <button onclick="window.scrollTo({top: 0, behavior: 'smooth'});" class="btn btn-outline-light" style="border: none !important;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-up-circle" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
-                    </svg>
-                </button>
-                <p style="color:#ffffff; margin-top: 10px; font-family: 'Comfortaa'"> Talia Berdichevsky : 2023</p>
-                <br>
-            </div>
+        <div class="text-center">
+            <button onclick="window.scrollTo({top: 0, behavior: 'smooth'});" class="btn btn-outline-light" style="border: none !important;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-up-circle" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+                  </svg>
+            </button>
+            <p style="color:#ffffff; margin-top: 10px; font-family: 'Comfortaa'"> Talia Berdichevsky : 2023</p>
+            <br>
+        </div>
         </div>
     </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            document.getElementById('scrollDownButton').addEventListener('click', function() {
+                document.querySelector('.about-me').scrollIntoView({ behavior: 'smooth' });
+            });
+        });
+    </script>
     <script src="https://kit.fontawesome.com/yourkit.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-    </script>
+      </script>
+
 </body>
 </html>
