--- a/index.html
+++ b/index.html
@@ -349,26 +349,25 @@
                     <div class="row">
                         <div class="col-md-6 info-section">
                             <p class="info" data-aos="fade-up" data-aos-delay="50"><b>N A M E  :</b> <span class="lighter-thinner">    Talia (Tal) Berdichevsky</span></p>
-                            <p class="info" data-aos="fade-up" data-aos-delay="150"><b>P R O N O U N S  :</b><span class="lighter-thinner">     She/Her/Hers</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="250"><b>S C H O O L  :</b><span class="lighter-thinner">     Northeastern University, Khoury College of CS</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="350"><b>L A N G U A G E S  :</b> <span class="lighter-thinner">    Java | Swift | HTML | JavaScript | CSS | C | Python </span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="450"><b>H O M E T O W N  :</b> <span class="lighter-thinner">    Newton, MA</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="550"><b>A G E  :</b> <span class="lighter-thinner">    20 Years</span></p>
                         </div>
                         <div class="col-md-6">
-                            <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="200" style="margin-top: 20px;">A student at Northeastern University pursuing a BS Computer Science degree with a minor in Mathematics and a concentration in Artificial Intelligence. I am actively looking for opportunities to apply myself for a future career in software development!</p>
+                            <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="200">A student at Northeastern University pursuing a BS Computer Science degree with a minor in Mathematics and a concentration in Artificial Intelligence. I am actively looking for opportunities to apply myself for a future career in software development!</p>
                             <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="400">I fluently speak English, Russian, Hebrew, and have classroom experience in Spanish. As for my hobbies, I enjoy calligraphy, crochet, baking, and photography (more on that below!). </p>
-                            <div class="row text-center justify-content-center" style="margin-top: 50px" data-aos="fade-up" data-aos-delay="550">
-                                <div class="col col-lg-4" style="margin-right: 50px;">
+                            <div class="row text-center justify-content-center" style="margin-top: 50px" data-aos="fade-up" data-aos-delay="450">
+                                <div class="col col-lg-4" style="margin-right: 30px;">
                                     <a href="#contact-section">
-                                        <button type="button" class="btn btn-outline-dark contact-button" style="font-size:14px; font-family: 'DM Sans', sans" button id="scrollDownButton" aria-label="Scroll down">
+                                        <button type="button" class="btn btn-outline-dark" style="font-size:14px; font-family: 'DM Sans', sans" button id="scrollDownButton" aria-label="Scroll down">
                                             CONTACT ME
                                         </button>
                                     </a>
                                 </div>
                                 <div class="col col-lg-4">
                                     <a href="Resume-Tal Berdichevsky.pdf" download="Tal_Berdichevsky_Resume">
-                                        <button type="button" class="btn btn-outline-dark contact-button" style="font-size:14px; font-family: 'DM Sans', sans">
+                                        <button type="button" class="btn btn-outline-dark" style="font-size:14px; font-family: 'DM Sans', sans">
                                             DOWNLOAD CV
                                         </button>
                                     </a>
