centering highlight buttons

--- a/index.html
+++ b/index.html
@@ -381,11 +381,11 @@
 
         <!-- SHORTCUTS SECTION -->
         <div class="container-fluid highlights-section">
-            <div class="row text-center justify-content-center">
+            <div class="row text-center">
                     <p style="font-size:30px; font-family: 'DM Sans', sans; margin-top: 40px; margin-bottom: 30px;">S H O R T C U T S</p>
             </div>
              <!-- HIGHLIGHT BUTTONS -->
-            <div class="row text-center justify-content-center highlight-button-container" style="padding-left: 150px; padding-bottom: 100px;">
+            <div class="row text-center justify-content-center highlight-button-container" style="padding-left: 200px; padding-bottom: 100px;">
                 <!-- row 1 -->
                 <div class="col col-lg-3">
                     <a href="#wayfair-coop">
