--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <div class="header-text">
                     <h1>Talia Berdichevsky</h1>
                     <hr>
-                    <h4>Student, Software Engineer</h4>
+                    <h4>Software Engineer</h4>
                 </div>
             <!-- Button Elements -->
                 <div class="row text-center justify-content-center">
@@ -352,10 +352,10 @@
                             <p class="info" data-aos="fade-up" data-aos-delay="250"><b>S C H O O L  :</b><span class="lighter-thinner">     Northeastern University, Khoury College of CS</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="350"><b>L A N G U A G E S  :</b> <span class="lighter-thinner">    Java | Swift | HTML | JavaScript | CSS | C | Python </span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="450"><b>H O M E T O W N  :</b> <span class="lighter-thinner">    Newton, MA</span></p>
-                            <p class="info" data-aos="fade-up" data-aos-delay="550"><b>A G E  :</b> <span class="lighter-thinner">    20 Years</span></p>
+                            <p class="info" data-aos="fade-up" data-aos-delay="550"><b>A G E  :</b> <span class="lighter-thinner">    21 Years</span></p>
                         </div>
                         <div class="col-md-6">
-                            <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="200">A student at Northeastern University pursuing a BS Computer Science degree with a minor in Mathematics and a concentration in Artificial Intelligence. I am actively looking for opportunities to apply myself for a future career in software development!</p>
+                            <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="200">A Software Engineer for Wayfair's Content Recommendations team from Northeastern University (BSCS CS with a minor in Mathematics & concentration in AI).</p>
                             <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="400">I fluently speak English, Russian, Hebrew, and have classroom experience in Spanish. As for my hobbies, I enjoy calligraphy, crochet, baking, and photography (more on that below!). </p>
                             <div class="row text-center justify-content-center" style="margin-top: 50px" data-aos="fade-up" data-aos-delay="450">
                                 <div class="col col-lg-4" style="margin-right: 30px;">
@@ -463,7 +463,7 @@
                                 <p><b>TA Experience:</b> Database Design</p>
                             </div>
                             <br>
-                            <span class="date">September 2021 - Present</span>
+                            <span class="date">September 2021 - August 2024</span>
                         </div>
                     </div>
                     <div class="timeline-item" data-aos="fade-up" data-aos-delay="100">
