--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                             <p class="info" data-aos="fade-up" data-aos-delay="550"><b>A G E  :</b> <span class="lighter-thinner">    21 Years</span></p>
                         </div>
                         <div class="col-md-6">
-                            <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="200">A Software Engineer for Wayfair's Content Recommendations team from Northeastern University (BSCS CS with a minor in Mathematics & concentration in AI).</p>
+                            <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="200">A Software Engineer for Wayfair's Content Recommendations team from Northeastern University (BSCS with a minor in Mathematics & concentration in AI).</p>
                             <p class="lighter-thinner" data-aos="fade-up" data-aos-delay="400">I fluently speak English, Russian, Hebrew, and have classroom experience in Spanish. As for my hobbies, I enjoy calligraphy, crochet, baking, and photography (more on that below!). </p>
                             <div class="row text-center justify-content-center" style="margin-top: 50px" data-aos="fade-up" data-aos-delay="450">
                                 <div class="col col-lg-4" style="margin-right: 30px;">
