--- a/index.html
+++ b/index.html
@@ -515,18 +515,26 @@
                                 <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                                 <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0zm2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0z"/>
                             </svg>
-                            Software Engineering Co-op: Wayfair</p>
+                            Wayfair Inc.</p>
                         <p>
-                            Completed a 6-month co-op as a software engineer in the Content Recommendations team. 
+                            Software engineer in the Content Recommendations team.
                             <ul>
-                                <li>Developed new production recommendation strategies, optimized existing ones, established alerting for jobs/Airflow DAGs, and enhanced test coverage. </li>
-                                <li>Gathered input from various teams and worked on a validation endpoint for the content database used by marketing teams.</li>
-                                <li>Directly produced <b>11.5% GRS/User Lift</b> in Wayfair’s biggest promo period by assisting in the development of a “Quarter Takeover” promo event.</li>
-                                <li>Designed and implemented an organization-wide support request form, automating ticket creation and team notifications. The form streamlined the team’s support process, significantly improving efficiency and receiving high praise for its impact. </li>
+                        Orchestrated service modernization using CompletableFuture-based asynchronous processing & conducted critical load testing, demonstrating 70% reduction in P95 latency and 6% throughput improvement
+                        ● Drove 11.5% GRS/User Lift during peak period by contributing to “Quarter Takeover” promo event development
+                        ● Engineered & enhanced recommendation strategies and Airflow/Cloud Composer DAGs, establishing automated alerting
+                        and improving pipeline reliability
+                        ● Recognized as key contributor among 250+ engineers for technical implementations in search recs & marketing analytics
+                        ● Designed scalable support request system, streamlining cross-team collaboration through automated ticket routing
+                                <li>Orchestrated service modernization using CompletableFuture-based asynchronous processing & conducted critical load testing, demonstrating <b>70% reduction in P95 latency</b> and <b>6% throughput improvement</b> </li>
+                                <li>Drove <b>11.5% GRS/User Lift</b> during peak period by contributing to “Quarter Takeover” promo event development</li>
+                                <li>Engineered & enhanced recommendation strategies and Airflow/Cloud Composer DAGs, establishing automated alerting
+                                    and improving pipeline reliability </li>
+                                <li>Recognized as key contributor among 250+ engineers for technical implementations in search recs & marketing analytics</li>
+                                <li>Designed scalable support request system, streamlining cross-team collaboration through automated ticket routing</li>
                                 <li>Fostered a culture of teamwork through event organization.</li>
                             </ul>
                         </p>
-                        <span class="date">July 2023-December 2023</span>
+                        <span class="date">Full-time (April 2024-Present), Co-op (July 2023-December 2023)</span>
                     </div>
                     <div class="col-md-1">
                     </div>
@@ -802,7 +810,7 @@
                     <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
                   </svg>
             </button>
-            <p style="color:#ffffff; margin-top: 10px; font-family: 'Comfortaa'"> Talia Berdichevsky : 2023</p>
+            <p style="color:#ffffff; margin-top: 10px; font-family: 'Comfortaa'"> Talia Berdichevsky : 2024</p>
             <br>
         </div>
         </div>
