--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                         <div class="col-md-6 info-section">
                             <p class="info" data-aos="fade-up" data-aos-delay="50"><b>N A M E  :</b> <span class="lighter-thinner">    Talia (Tal) Berdichevsky</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="250"><b>S C H O O L  :</b><span class="lighter-thinner">     Northeastern University, Khoury College of CS</span></p>
-                            <p class="info" data-aos="fade-up" data-aos-delay="350"><b>L A N G U A G E S  :</b> <span class="lighter-thinner">    Java | Swift | HTML | JavaScript | CSS | C | Python </span></p>
+                            <p class="info" data-aos="fade-up" data-aos-delay="350"><b>L A N G U A G E S  :</b> <span class="lighter-thinner">    Java | Python | Swift | HTML | JavaScript | CSS | C</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="450"><b>H O M E T O W N  :</b> <span class="lighter-thinner">    Newton, MA</span></p>
                             <p class="info" data-aos="fade-up" data-aos-delay="550"><b>A G E  :</b> <span class="lighter-thinner">    21 Years</span></p>
                         </div>
@@ -519,12 +519,6 @@
                         <p>
                             Software engineer in the Content Recommendations team.
                             <ul>
-                        Orchestrated service modernization using CompletableFuture-based asynchronous processing & conducted critical load testing, demonstrating 70% reduction in P95 latency and 6% throughput improvement
-                        ● Drove 11.5% GRS/User Lift during peak period by contributing to “Quarter Takeover” promo event development
-                        ● Engineered & enhanced recommendation strategies and Airflow/Cloud Composer DAGs, establishing automated alerting
-                        and improving pipeline reliability
-                        ● Recognized as key contributor among 250+ engineers for technical implementations in search recs & marketing analytics
-                        ● Designed scalable support request system, streamlining cross-team collaboration through automated ticket routing
                                 <li>Orchestrated service modernization using CompletableFuture-based asynchronous processing & conducted critical load testing, demonstrating <b>70% reduction in P95 latency</b> and <b>6% throughput improvement</b> </li>
                                 <li>Drove <b>11.5% GRS/User Lift</b> during peak period by contributing to “Quarter Takeover” promo event development</li>
                                 <li>Engineered & enhanced recommendation strategies and Airflow/Cloud Composer DAGs, establishing automated alerting
